# python-template

./: .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
source/: app.py  sandbox.ipynb
src/: app.py  sandbox.ipynb
tests/: conftest.py  test_app.py
